--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -43,3 +43,8 @@ $hyperlink-orange: #f77c50;
 @import 'compact-panel';
 @import 'nav';
 @import 'examples-grid';
+
+
+// .row, .column, .columns {
+//   outline: purple solid 1px;
+// }
