Add tabbing elements and focus styles

--- a/source/_includes/table.html
+++ b/source/_includes/table.html
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <a class="key slide-panel__open" data-term="key">Key<i class="material-icons">more_vert</i></a>
+      <button tabindex="0" class="key slide-panel__open" data-term="key">Key<i class="material-icons">more_vert</i></button>
 
     </div>
   </div>
