--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -1,19 +1,19 @@
 <header class="top-bar" style="background-image:url({{'/images/map-overlay.png' | relative_url}})">
 
-  <span class="top-bar__button js-trigger-nav" data-direction="left">menu</span>
+  <button role="button" tabindex="0" class="top-bar__button js-trigger-nav" data-direction="left">menu</button>
   <nav class="nav">
     <div class="nav__container">
       <div class="top-bar__controls">
-        <span class="top-bar__button js-close-nav">close</span>
+        <button class="top-bar__button js-close-nav">close</button>
       </div>
       <div class="nav--links">
         <a class="main-link" href="{{'/downloads.html' | relative_url}}">Downloads</a>
-        <a class="sub-link">2019 State Standard Report</a>
-        <a class="sub-link">2019 Leading Examples</a>
-        <a class="sub-link">2019 Criteria Questions</a>
-        <a class="sub-link">State Spotlights </a>
+        <a class="sub-link" href="#">2019 State Standard Report</a>
+        <a class="sub-link" href="#">2019 Leading Examples</a>
+        <a class="sub-link" href="#">2019 Criteria Questions</a>
+        <a class="sub-link" href="#">State Spotlights </a>
         <a class="main-link" href="{{'/state-standard-of-excellence/leading-examples.html' | relative_url}}">Leading Examples</a>
-        <a class="main-link">Examples by Criteria</a>
+        <a class="main-link" href="#">Examples by Criteria</a>
       </div>
     </div>
   </nav>
