--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -29,7 +29,7 @@ criteria_dropdown_nav: true
       </div>
     </div>
     <div class="button-container button-container--align-left row">
-     <a class="button button--index" onclick="goBack()"><span>Back to<br>Standard</span></a>
+     <a tabindex="0" class="button button--index" onclick="goBack()"><span>Back to<br>Standard</span></a>
     </div>
   </section>
 
