--- a/source/_sass/_top-bar.scss
+++ b/source/_sass/_top-bar.scss
@@ -33,6 +33,7 @@
     z-index: 2;
     height: 3.5rem;
     font-size: 2.2rem;
+    background-color: transparent;    
   }
   &__button--more {
     @extend .u-material-icons;
