Add homepage links to menu and downloads page

--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -7,6 +7,7 @@
         <button class="top-bar__button js-close-nav">close</button>
       </div>
       <div class="nav--links">
+        <a class="main-link" href="{{'/' | relative_url}}">State Standard of Excellence</a>
         <a class="main-link" href="{{'/downloads.html' | relative_url}}">Downloads</a>
         <a class="sub-link" href="#">2019 State Standard Report</a>
         <a class="sub-link" href="#">2019 Leading Examples</a>
