--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -7,14 +7,14 @@
         <button class="top-bar__button js-close-nav">close</button>
       </div>
       <div class="nav--links">
-        <a class="main-link" href="{{'/' | relative_url}}">State Standard of Excellence</a>
+        <a class="main-link" href="{{'/' | relative_url}}">Invest in What Works State Standard of Excellence</a>
         <a class="main-link" href="{{'/downloads.html' | relative_url}}">Downloads</a>
-        <a class="sub-link" href="#">2019 State Standard Report</a>
-        <a class="sub-link" href="#">2019 Leading Examples</a>
-        <a class="sub-link" href="#">2019 Criteria Questions</a>
-        <a class="sub-link" href="#">State Spotlights </a>
+        <a class="sub-link" href="{{'/2019-invest-in-what-works-state-standard-of-excellence.pdf' | relative_url}}">2019 State Standard of Excellence</a>
+        <a class="sub-link" href="{{'2019-summary-chart.pdf' | relative_url}}">2019 Leading Examples</a>
+        <a class="sub-link" href="{{'2019-criteria-and-descriptions.pdf' | relative_url}}">2019 Criteria Questions</a>
+        <a class="sub-link" href="{{'/downloads.html#state-spotlights' | relative_url}}">State Spotlights </a>
         <a class="main-link" href="{{'/state-standard-of-excellence/leading-examples.html' | relative_url}}">Leading Examples</a>
-        <a class="main-link" href="#">Examples by Criteria</a>
+        <a class="main-link" href="{{'/state-standard-of-excellence/strategic-goals.html' | relative_url}}">Examples by Criteria</a>
       </div>
     </div>
   </nav>
