--- a/source/_includes/key-modal.html
+++ b/source/_includes/key-modal.html
@@ -5,8 +5,7 @@
     </button>
   </div>
   <div class="modal__content">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus fugiat mollitia doloremque error amet
-      doloribus laborum obcaecati repudiandae eaque reprehenderit?</p>
+    <p>Results for America identified state government examples of data-driven and evidence-based practices, policies, programs, and systems in the areas of child welfare, criminal justice, economic opportunity, education, health, and workforce.</p>
     <div class="key-header">Issues</div>
     <ul>
       {% for issue in include.issues %}
