--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -19,6 +19,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
     <link rel="stylesheet" href=https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72382957-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-72382957-1');
+    </script>
   </head>
 
   <body class="cbp-spmenu-push">
