Edit index buttons

--- a/source/_includes/buttons.html
+++ b/source/_includes/buttons.html
@@ -7,7 +7,7 @@
   </div>
   <div class="row align-center buttons">
     <div class="column large-6 medium-8 small-12">
-      <a href="{{page.download_summary}}" target="_blank" class="button download-button">Download Leading State
+      <a href="{{page.download_summary}}" target="_blank" class="button download-button">Download Leading
         Examples<i class="material-icons ">arrow_forward</i></a>
     </div>
   </div>
@@ -26,10 +26,4 @@
     </div>
   </div>
 
-  <div class="row align-center buttons">
-    <div class="column large-7 medium-8 small-12">
-      <a href="{{page.download_methodology}}" target="_blank" class="button download-button">Download Methodology and Acknowledgements<i
-          class="material-icons ">arrow_forward</i></a>
-    </div>
-  </div>
 </div>
