Open all internal links in same tab

--- a/source/_includes/buttons_top.html
+++ b/source/_includes/buttons_top.html
@@ -1,7 +1,7 @@
 <div class="button-container">
   <div class="row align-center buttons">
     <div class="column large-5 medium-8 small-12">
-      <a href="{{page.download_url}}" target="_blank" class="button download-button">Download State Standard<i
+      <a href="{{page.download_url}}" class="button download-button">Download State Standard<i
           class="material-icons ">arrow_forward</i></a>
     </div>
   </div>
