--- a/source/_includes/buttons.html
+++ b/source/_includes/buttons.html
@@ -1,19 +1,19 @@
 <div class="button-container">
   <div class="row align-center buttons">
     <div class="column large-5 medium-8 small-12">
-      <a href="{{page.download_url}}" target="_blank" class="button download-button">Download State Standard<i
+      <a href="{{page.download_url}}" class="button download-button">Download State Standard<i
           class="material-icons ">arrow_forward</i></a>
     </div>
   </div>
   <div class="row align-center buttons">
     <div class="column large-6 medium-8 small-12">
-      <a href="{{page.download_summary}}" target="_blank" class="button download-button">Download Leading
+      <a href="{{page.download_summary}}" class="button download-button">Download Leading
         Examples<i class="material-icons ">arrow_forward</i></a>
     </div>
   </div>
   <div class="row align-center buttons">
     <div class="column large-7 medium-9 small-12">
-      <a href="{{page.download_appendix}}" target="_blank" class="button download-button download-button--large"><i
+      <a href="{{page.download_appendix}}" class="button download-button download-button--large"><i
           class="material-icons arrow">arrow_forward</i></a>
     </div>
   </div>
@@ -21,7 +21,7 @@
 
   <div class="row align-center buttons">
     <div class="column large-7 medium-8 small-12">
-      <a href="{{page.download_analyses}}" target="_blank" class="button download-button"> Download State Standard of Excellence Analyses<i
+      <a href="{{page.download_analyses}}" class="button download-button"> Download State Standard of Excellence Analyses<i
           class="material-icons ">arrow_forward</i></a>
     </div>
   </div>
